.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:43:27 **** Incremental Build of configuration Debug for project DinerPhilosophes ****
make all 
Building file: ../src/SolutionEtudiant.cpp
Invoking: GCC C++ Compiler
g++ -pthread -I"/home/bultot/Documents/SETR_Diner_Philosophes/DinerPhilosophes/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SolutionEtudiant.d" -MT"src/SolutionEtudiant.o" -o "src/SolutionEtudiant.o" "../src/SolutionEtudiant.cpp"
Finished building: ../src/SolutionEtudiant.cpp
 
Building target: DinerPhilosophes
Invoking: GCC C++ Linker
g++ -pthread  -o "DinerPhilosophes"  ./src/DinerPhilosophes.o ./src/SolutionEtudiant.o   -lrt
Finished building target: DinerPhilosophes
 
14:52:09 **** Incremental Build of configuration Debug for project DinerPhilosophes ****
make all 
Building file: ../src/SolutionEtudiant.cpp
Invoking: GCC C++ Compiler
g++ -pthread -I"/home/bultot/Documents/SETR_Diner_Philosophes/DinerPhilosophes/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SolutionEtudiant.d" -MT"src/SolutionEtudiant.o" -o "src/SolutionEtudiant.o" "../src/SolutionEtudiant.cpp"
../src/SolutionEtudiant.cpp: In function ‘void ViePhilosopheSolution1(int)’:
../src/SolutionEtudiant.cpp:268:31: error: ‘peut’ was not declared in this scope
  268 |  std::cout<< "philo" << id << peut manger <<std::endl;
      |                               ^~~~
make: *** [src/subdir.mk:23 : src/SolutionEtudiant.o] Erreur 1
"make all" terminated with exit code 2. Build might be incomplete.
14:52:21 **** Incremental Build of configuration Debug for project DinerPhilosophes ****
make all 
Building file: ../src/SolutionEtudiant.cpp
Invoking: GCC C++ Compiler
g++ -pthread -I"/home/bultot/Documents/SETR_Diner_Philosophes/DinerPhilosophes/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SolutionEtudiant.d" -MT"src/SolutionEtudiant.o" -o "src/SolutionEtudiant.o" "../src/SolutionEtudiant.cpp"
Finished building: ../src/SolutionEtudiant.cpp
 
Building target: DinerPhilosophes
Invoking: GCC C++ Linker
g++ -pthread  -o "DinerPhilosophes"  ./src/DinerPhilosophes.o ./src/SolutionEtudiant.o   -lrt
Finished building target: DinerPhilosophes
 
14:55:20 **** Incremental Build of configuration Debug for project DinerPhilosophes ****
make all 
Building file: ../src/SolutionEtudiant.cpp
Invoking: GCC C++ Compiler
g++ -pthread -I"/home/bultot/Documents/SETR_Diner_Philosophes/DinerPhilosophes/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SolutionEtudiant.d" -MT"src/SolutionEtudiant.o" -o "src/SolutionEtudiant.o" "../src/SolutionEtudiant.cpp"
Finished building: ../src/SolutionEtudiant.cpp
 
Building target: DinerPhilosophes
Invoking: GCC C++ Linker
g++ -pthread  -o "DinerPhilosophes"  ./src/DinerPhilosophes.o ./src/SolutionEtudiant.o   -lrt
Finished building target: DinerPhilosophes
 
14:56:12 **** Incremental Build of configuration Debug for project DinerPhilosophes ****
make all 
Building file: ../src/DinerPhilosophes.cpp
Invoking: GCC C++ Compiler
g++ -pthread -I"/home/bultot/Documents/SETR_Diner_Philosophes/DinerPhilosophes/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/DinerPhilosophes.d" -MT"src/DinerPhilosophes.o" -o "src/DinerPhilosophes.o" "../src/DinerPhilosophes.cpp"
Finished building: ../src/DinerPhilosophes.cpp
 
Building file: ../src/SolutionEtudiant.cpp
Invoking: GCC C++ Compiler
g++ -pthread -I"/home/bultot/Documents/SETR_Diner_Philosophes/DinerPhilosophes/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SolutionEtudiant.d" -MT"src/SolutionEtudiant.o" -o "src/SolutionEtudiant.o" "../src/SolutionEtudiant.cpp"
Finished building: ../src/SolutionEtudiant.cpp
 
Building target: DinerPhilosophes
Invoking: GCC C++ Linker
g++ -pthread  -o "DinerPhilosophes"  ./src/DinerPhilosophes.o ./src/SolutionEtudiant.o   -lrt
Finished building target: DinerPhilosophes
 
15:01:21 **** Incremental Build of configuration Debug for project DinerPhilosophes ****
make all 
Building file: ../src/SolutionEtudiant.cpp
Invoking: GCC C++ Compiler
g++ -pthread -I"/home/bultot/Documents/SETR_Diner_Philosophes/DinerPhilosophes/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SolutionEtudiant.d" -MT"src/SolutionEtudiant.o" -o "src/SolutionEtudiant.o" "../src/SolutionEtudiant.cpp"
Finished building: ../src/SolutionEtudiant.cpp
 
Building target: DinerPhilosophes
Invoking: GCC C++ Linker
g++ -pthread  -o "DinerPhilosophes"  ./src/DinerPhilosophes.o ./src/SolutionEtudiant.o   -lrt
Finished building target: DinerPhilosophes
 
15:02:24 **** Incremental Build of configuration Debug for project DinerPhilosophes ****
make all 
Building file: ../src/SolutionEtudiant.cpp
Invoking: GCC C++ Compiler
g++ -pthread -I"/home/bultot/Documents/SETR_Diner_Philosophes/DinerPhilosophes/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SolutionEtudiant.d" -MT"src/SolutionEtudiant.o" -o "src/SolutionEtudiant.o" "../src/SolutionEtudiant.cpp"
Finished building: ../src/SolutionEtudiant.cpp
 
Building target: DinerPhilosophes
Invoking: GCC C++ Linker
g++ -pthread  -o "DinerPhilosophes"  ./src/DinerPhilosophes.o ./src/SolutionEtudiant.o   -lrt
Finished building target: DinerPhilosophes
 
15:02:47 **** Incremental Build of configuration Debug for project DinerPhilosophes ****
make all 
Building file: ../src/SolutionEtudiant.cpp
Invoking: GCC C++ Compiler
g++ -pthread -I"/home/bultot/Documents/SETR_Diner_Philosophes/DinerPhilosophes/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SolutionEtudiant.d" -MT"src/SolutionEtudiant.o" -o "src/SolutionEtudiant.o" "../src/SolutionEtudiant.cpp"
Finished building: ../src/SolutionEtudiant.cpp
 
Building target: DinerPhilosophes
Invoking: GCC C++ Linker
g++ -pthread  -o "DinerPhilosophes"  ./src/DinerPhilosophes.o ./src/SolutionEtudiant.o   -lrt
Finished building target: DinerPhilosophes
 
15:02:54 **** Incremental Build of configuration Debug for project DinerPhilosophes ****
make all 
Building file: ../src/SolutionEtudiant.cpp
Invoking: GCC C++ Compiler
g++ -pthread -I"/home/bultot/Documents/SETR_Diner_Philosophes/DinerPhilosophes/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SolutionEtudiant.d" -MT"src/SolutionEtudiant.o" -o "src/SolutionEtudiant.o" "../src/SolutionEtudiant.cpp"
Finished building: ../src/SolutionEtudiant.cpp
 
Building target: DinerPhilosophes
Invoking: GCC C++ Linker
g++ -pthread  -o "DinerPhilosophes"  ./src/DinerPhilosophes.o ./src/SolutionEtudiant.o   -lrt
Finished building target: DinerPhilosophes
 
15:04:22 **** Incremental Build of configuration Debug for project DinerPhilosophes ****
make all 
Building file: ../src/SolutionEtudiant.cpp
Invoking: GCC C++ Compiler
g++ -pthread -I"/home/bultot/Documents/SETR_Diner_Philosophes/DinerPhilosophes/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SolutionEtudiant.d" -MT"src/SolutionEtudiant.o" -o "src/SolutionEtudiant.o" "../src/SolutionEtudiant.cpp"
Finished building: ../src/SolutionEtudiant.cpp
 
Building target: DinerPhilosophes
Invoking: GCC C++ Linker
g++ -pthread  -o "DinerPhilosophes"  ./src/DinerPhilosophes.o ./src/SolutionEtudiant.o   -lrt
Finished building target: DinerPhilosophes
 
15:05:06 **** Incremental Build of configuration Debug for project DinerPhilosophes ****
make all 
Building file: ../src/SolutionEtudiant.cpp
Invoking: GCC C++ Compiler
g++ -pthread -I"/home/bultot/Documents/SETR_Diner_Philosophes/DinerPhilosophes/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SolutionEtudiant.d" -MT"src/SolutionEtudiant.o" -o "src/SolutionEtudiant.o" "../src/SolutionEtudiant.cpp"
Finished building: ../src/SolutionEtudiant.cpp
 
Building target: DinerPhilosophes
Invoking: GCC C++ Linker
g++ -pthread  -o "DinerPhilosophes"  ./src/DinerPhilosophes.o ./src/SolutionEtudiant.o   -lrt
Finished building target: DinerPhilosophes
 
